Corrected the redirect after post, added text wrap to pre tag. This is the final main version, will add hacker portion on new branch

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,9 @@
 
+pre {
+    white-space: pre-wrap;
+    word-break: keep-all;
+}
+
 textarea {
         width: 400px;
         height: 200px;
@@ -15,7 +20,7 @@ textarea {
             label{
                 display: block;
                 font-size: 20px;
-                
+
             }
 
             input[type=text]{
